# tradingbot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml
models/calibrators/: test_family.pkl
polymarket_alpha/: __init__.py  config.py  schemas.py
polymarket_alpha/backtest/: engine.py
polymarket_alpha/brokers/: __init__.py  alpaca.py  base.py  binance.py  paper.py  polymarket_live.py  sports.py  types.py
polymarket_alpha/calibration/: calibrator.py
polymarket_alpha/dashboard/: app.py
polymarket_alpha/data/: __init__.py  pipeline.py  providers.py  repository.py  schemas.py
polymarket_alpha/engine/: __init__.py  analytics.py  control.py  ledger.py  orchestrator.py  risk.py  router.py
polymarket_alpha/execution/: decision_engine.py  live_trader.py  paper_trader.py
polymarket_alpha/features/: builder.py
polymarket_alpha/ingestion/: collector.py  store.py
polymarket_alpha/models/: ensemble.py  llm_model.py  signal_models.py
polymarket_alpha/payments/: __init__.py  stripe_scaffold.py
polymarket_alpha/risk/: manager.py
polymarket_alpha/services/: __init__.py  trading_chat.py
polymarket_alpha/strategies/: __init__.py  base.py  engine.py  features.py  policy.py  signals.py
polymarket_alpha/ui/: __init__.py  app.py  chat_panel.py  components.py
polymarket_alpha/utils/: logging_utils.py  metrics_tracker.py  runtime_config.py
scripts/: retrain_calibrators.py  run_autonomous.py  run_backtest.py  run_collector.py  run_paper_trader.py
tests/: test_all.py  test_brokers.py
